--- a/src/2-snackbar.html
+++ b/src/2-snackbar.html
@@ -30,6 +30,6 @@
         <button class="create" type="submit">Create notification</button>
       </form>
     </main>
-    <script type="module" src="js/2-snackbar.js"></script>
+    <script type="module" src="./js/2-snackbar.js"></script>
   </body>
 </html>
