--- a/src/2-snackbar.html
+++ b/src/2-snackbar.html
@@ -9,7 +9,7 @@
   </head>
   <body>
     <main>
-      <form id="form">
+      <form class="form">
         <label class="delay-lab">
           Delay (ms)
           <input type="number" id="delay" required />
@@ -30,6 +30,6 @@
         <button class="create" type="submit">Create notification</button>
       </form>
     </main>
-    <script type="module" src="./js/2-snackbar.js"></script>
+    <script type="module" src="/js/2-snackbar.js"></script>
   </body>
 </html>
